// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Leaderboard > should render Leaderboard excluding the podium 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="column"
      style="--row-index: 0;"
    >
      <div
        class="position"
      >
        <span>
          4
        </span>
      </div>
    </div>
    <div
      class="column"
      style="--row-index: 0;"
    >
      <div
        class="nameRow"
      >
        <span>
          WhiskerFox
        </span>
      </div>
    </div>
    <div
      class="column"
      style="--row-index: 0;"
    >
      <span
        class="score"
      >
        14118
      </span>
    </div>
    <div
      class="column"
      style="--row-index: 1;"
    >
      <div
        class="position"
      >
        <span>
          5
        </span>
      </div>
    </div>
    <div
      class="column"
      style="--row-index: 1;"
    >
      <div
        class="nameRow"
      >
        <span>
          JollyNimbus
        </span>
      </div>
    </div>
    <div
      class="column"
      style="--row-index: 1;"
    >
      <span
        class="score"
      >
        13463
      </span>
    </div>
  </div>
</div>
`;

exports[`Leaderboard > should render Leaderboard including the podium 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="column podium"
      style="--row-index: 0;"
    >
      <div
        class="position"
      >
        <span>
          1
        </span>
      </div>
    </div>
    <div
      class="column podium"
      style="--row-index: 0;"
    >
      <div
        class="nameRow"
      >
        <span>
          ShadowCyborg
        </span>
      </div>
    </div>
    <div
      class="column podium"
      style="--row-index: 0;"
    >
      <span
        class="score"
      >
        18456
      </span>
    </div>
    <div
      class="column podium"
      style="--row-index: 1;"
    >
      <div
        class="position"
      >
        <span>
          2
        </span>
      </div>
    </div>
    <div
      class="column podium"
      style="--row-index: 1;"
    >
      <div
        class="nameRow"
      >
        <span>
          Radar
        </span>
      </div>
    </div>
    <div
      class="column podium"
      style="--row-index: 1;"
    >
      <span
        class="score"
      >
        18398
      </span>
    </div>
    <div
      class="column podium"
      style="--row-index: 2;"
    >
      <div
        class="position"
      >
        <span>
          3
        </span>
      </div>
    </div>
    <div
      class="column podium"
      style="--row-index: 2;"
    >
      <div
        class="nameRow"
      >
        <span>
          ShadowWhirlwind
        </span>
      </div>
    </div>
    <div
      class="column podium"
      style="--row-index: 2;"
    >
      <span
        class="score"
      >
        15492
      </span>
    </div>
    <div
      class="column podium"
      style="--row-index: 3;"
    >
      <div
        class="position"
      >
        <span>
          4
        </span>
      </div>
    </div>
    <div
      class="column podium"
      style="--row-index: 3;"
    >
      <div
        class="nameRow"
      >
        <span>
          WhiskerFox
        </span>
      </div>
    </div>
    <div
      class="column podium"
      style="--row-index: 3;"
    >
      <span
        class="score"
      >
        14118
      </span>
    </div>
    <div
      class="column podium"
      style="--row-index: 4;"
    >
      <div
        class="position"
      >
        <span>
          5
        </span>
      </div>
    </div>
    <div
      class="column podium"
      style="--row-index: 4;"
    >
      <div
        class="nameRow"
      >
        <span>
          JollyNimbus
        </span>
      </div>
    </div>
    <div
      class="column podium"
      style="--row-index: 4;"
    >
      <span
        class="score"
      >
        13463
      </span>
    </div>
  </div>
</div>
`;
